[tool.poetry]
name = "localitysensitivehashingalgorithms"
version = "0.1.0"
description = ""
authors = ["KevReece <kevinjamesreece@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.28.0"
numpy = "^1.26.3"
ipywidgets = "^8.1.1"
gensim = "^4.3.2"
scikit-learn = "^1.4.0"
nltk = "^3.8.1"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
